feat(payment) : add stripe communication system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ springdoc.swagger-ui.lang=fr
 # --- SMTP Email Configuration ---
 spring.mail.host=smtp.your-email-provider.com
 spring.mail.port=587
+
+# --- Stripe ---
+stripe.secret.key=${STRIPE_SECRET_KEY:dummy_secret}
+stripe.public.key=${STRIPE_PUBLIC_KEY:dummy_public}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET:dummy_webhook}
