--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ springdoc.swagger-ui.lang=fr
 spring.mail.host=smtp.your-email-provider.com
 spring.mail.port=587
 
+security.twofactor.ttl-minutes=10
+
 # --- Stripe ---
 stripe.secret.key=${STRIPE_SECRET_KEY:dummy_secret}
 stripe.public.key=${STRIPE_PUBLIC_KEY:dummy_public}
